tdf#136233: Use sheet-local named ranges for VBA's Worksheet.Names

Change-Id: Ia08814b843f3f78337301c324290a3d9420f5f38